--- a/arkconfig.json
+++ b/arkconfig.json
@@ -1,35 +1,35 @@
 {
-    # 服务端口
+    // # 服务端口
     "Port": 8082,
-    # 鉴权Token
+    // # 鉴权Token
     "Token": "",
-    # 短信登陆是否使用代理
+    // # 短信登陆是否使用代理
     "useProxy": 0,
-    # 代理api地址
+    // # 代理api地址
     "ProxyUrl": "",
-    # 青龙服务器配置
+    // # 青龙服务器配置
     "servers": [
         {
-            # 服务器ID
+            // # 服务器ID
             "ServerID": 1,
-            # 服务器名称
+            // # 服务器名称
             "ServerName": "服务器1",
-            # 服务器地址
+            // # 服务器地址
             "ServerUrl": "https://web-lifeishard4me.cloud.okteto.net",
-            # 青龙客户端ID
+            // # 青龙客户端ID
             "ServerClientId":" _RdFmtctD1_K",
-            # 青龙客户端密钥
+            // # 青龙客户端密钥
             "ServerSecret": "E75f15RdF_n_CacigNjHJQyL",
-            # 服务器最大CK数量
+            // # 服务器最大CK数量
             "ServerMAXck": 99
-        },
-        # {
-        #     "ServerID": 2,
-        #     "ServerName": "",
-        #     "ServerUrl": "",
-        #     "ServerClientId": "",
-        #     "ServerSecret": "",
-        #     "ServerMAXck": 99
-        # }
+        }
+        // # {
+        // #     "ServerID": 2,
+        // #     "ServerName": "",
+        // #     "ServerUrl": "",
+        // #     "ServerClientId": "",
+        // #     "ServerSecret": "",
+        // #     "ServerMAXck": 99
+        // # }
     ]
 }
