--- a/arkconfig.json
+++ b/arkconfig.json
@@ -15,11 +15,11 @@
             // # 服务器名称
             "ServerName": "服务器1",
             // # 服务器地址
-            "ServerUrl": $ServerUrl,
+            "ServerUrl": "$ServerUrl",
             // # 青龙客户端ID
-            "ServerClientId": $ServerClientId,
+            "ServerClientId": "$ServerClientId",
             // # 青龙客户端密钥
-            "ServerSecret": $ServerSecret,
+            "ServerSecret": "$ServerSecret",
             // # 服务器最大CK数量
             "ServerMAXck": 99
         }
