--- a/Dockerfile_bili
+++ b/Dockerfile_bili
@@ -1,10 +1,9 @@
 FROM python:3.8.3-alpine
 WORKDIR bili
 RUN apk update\
-    && apk update\
-    && git clone https://github.com/spiritLHLS/LotteryAutoScript_Station \
-    && cd LotteryAutoScript_Station \
+    && apk add git\
+    && git clone https://github.com/spiritLHLS/LotteryAutoScript_Station bili/ \
     && pip install -r requirement.txt \
     && python run.py
-
+# ENTRYPOINT ["python3", "run.py"]
 
