--- a/Dockerfile_bili
+++ b/Dockerfile_bili
@@ -1,8 +1,9 @@
 FROM python:3.8.3-alpine
 WORKDIR bili
-RUN apk update\
-    && apk add git\
-    && git clone https://github.com/spiritLHLS/LotteryAutoScript_Station.git bili/ \
+RUN apk update \
+    && apk add git \
+    && git clone https://github.com/spiritLHLS/LotteryAutoScript_Station.git \
+    && cd LotteryAutoScript_Station/
     && pip install -r requirement.txt \
     && python run.py
 # ENTRYPOINT ["python3", "run.py"]
