--- a/Dockerfile_bili
+++ b/Dockerfile_bili
@@ -3,7 +3,7 @@ WORKDIR bili
 RUN apk update \
     && apk add git \
     && git clone https://github.com/spiritLHLS/LotteryAutoScript_Station.git \
-    && cd LotteryAutoScript_Station/
+    && cd LotteryAutoScript_Station/ \
     && pip install -r requirement.txt \
     && python run.py
 # ENTRYPOINT ["python3", "run.py"]
